--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
 
+<html>
+  <title>
+  Food Savior website
+  </title>
+  
+  <body>
+    <h1>This is Food Savior github page</h1>
+  </body>
+  
+  <style>
+    body{
+      background-color:green;
+      color:#fff;
+      text-align:center;
+    }
+  </style>
+  
+</html>
