--- a/fs_kontakt.html
+++ b/fs_kontakt.html
@@ -1,10 +1,10 @@
-<! doctype html>
-
+<!DOCTYPE html>
+<html>
 <html lang="de">
 	<head>
 		<meta charset = "utf-8">
 		<meta name = "viewport" content = "width=device-width, inital-scale=1.0">
-
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
 		<titel> Food Savior - Kontaktdaten
 		</titel>
 	</head>
@@ -15,7 +15,7 @@
 	<!-- hier steht die Menüleiste -->
 		<nav>
 			<ul>
-				<li> <a href= "../fs_index.html"> Startseite </a> </li>
+				<li> <a href= "fs_index.html"> Startseite </a> </li>
 				<li> <a href= "fs_preise.html"> Unsere Produkte </a> </li>
 				<li> <a href= "fs_portfolio.html" > Erfahrungsberichte </a> </li>
 				<li> <a href= "fs_ueber_uns.html" > Food Savior - Wer sind wird </a> </li>
@@ -33,9 +33,9 @@
 		<h3>Intresse up-to-date zu bleiben - trag unten beistehende deine Mail Adresse für den kostenlosen
  			Newsletter ein  </h3>
 
-		<table>
+		<table class="center">
 			<tr>
-				<th> Newsletter-Adressfeld </th>		
+				<th> Newsletter-Adressfeld </th>
 			</tr>
 			<tr>
 				<td> XXX </td>
@@ -51,7 +51,7 @@
 				<li> Steuernummer: 9876541231 </li>
 				<li> Firmenbuchnummer: 55645645 </li>
 				<li> Alle Inhalte dieser Website sind Eigentum von Food Savior und ihren Inhaber*innen </li>
-			</ul>	
+			</ul>
 
 
 	</body>
