--- a/fs_portfolio.html
+++ b/fs_portfolio.html
@@ -1,10 +1,10 @@
-<!doctype html>
-
+<!DOCTYPE html>
+<html>
 <html lang="de">
 	<head>
 		<meta charset = "utf-8">
 		<meta name = "viewport" content = "width=device-width, inital-scale=1.0">
-
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
 		<titel> Food Savior Portfolio
 		</titel>
 	</head>
@@ -15,7 +15,7 @@
 	<!-- hier steht die Menüleiste -->
 		<nav>
 			<ul>
-				<li> <a href= "../fs_index.html" > Startseite </a> </li>
+				<li> <a href= "fs_index.html" > Startseite </a> </li>
 				<li> <a href= "fs_preise.html" > Unsere Produkte </a> </li>
 				<li> <a tabindex="0" aria-current="page"> Erfahrungsberichte </a> </li>
 				<li> <a href = "fs_ueber_uns.html"> Food Savior - Wer sind wir </a> </li>
@@ -23,7 +23,7 @@
 			</ul>
 		</nav>
 
-	
+
 		<h3> Anbei finden Sie Erfahungsberichte aus vergangenen Food Savior Projekten </h3>
 
 		<h4> Max Mustermann, Billa Filialleiter in Musterstadt </h4>
@@ -33,17 +33,17 @@
 
 		<h4> Sandra Meisinger, Rewe Konzern Mitarbeiterin in Hanseheim </h4>
 		<p> sam aliquyam diam diam dolore dolores duo eirmod eos erat, et nonumy sed tempor et et invidunt justo
-		 	labore Stet clita ea et gubergren, kasd magna no rebum. sanctus sea sed takimata ut vero voluptua. 
+		 	labore Stet clita ea et gubergren, kasd magna no rebum. sanctus sea sed takimata ut vero voluptua.
 			est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur </p>
 
 		<h4> Ali Chan, Billa Feinkostmitarbeiter in Hülsenberg </h4>
 		<p> ing id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing
-		 	elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. 
+		 	elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
 			Ut wisi enim ad minim veniam </h4>
 
 		<h4> Rosamunde Hansen, Langjährige Billa Stammkunding aus Rüstenheim </h4>
 		<p> Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
-	 		aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit 
+	 		aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit
 			esse molestie consequat </h4>
 
 
@@ -58,4 +58,3 @@
 
 	</body>
 </html>
-	
