--- a/fs_preise.html
+++ b/fs_preise.html
@@ -1,10 +1,10 @@
-<! doctype html>
-
+<!DOCTYPE html>
+<html>
 <html lang="de">
 	<head>
 		<meta charset = "utf-8">
 		<meta name = "viewport" content = "width=device-width, inital-scale=1.0">
-
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
 		<titel> Food Savior Produktübersicht
 		</titel>
 	</head>
@@ -15,22 +15,22 @@
 	<!-- hier steht die Menüleiste -->
 		<nav>
 			<ul>
-				<li> <a href= "../fs_index.html"> Startseite </a> </li>
+				<li> <a href= "fs_index.html"> Startseite </a> </li>
 				<li> <a tabindex="0" aria-current="page"> Unsere Produkte </a> </li>
 				<li> <a href = "fs_portfolio.html"> Erfahrungsberichte </a> </li>
 				<li> <a href = "fs_ueber_uns.html"> Food Savior - Wer sind wir </a> </li>
 				<li> <a href = "fs_kontakt.html"> Kontaktdaten </a> </li>
 			</ul>
 		</nav>
-	
+
 
 		<p>	Wenn auch Sie interesse an einer unkomplizierten, schnelle und günstsigen Integration eines
 			MHD-Features in Ihre bereits bestehende App haben dann haben wir von Food Savior genau das Richtige
  			für Sie <p>
 		<p> Verschaffen Sie sich eine ersten Überblick in unserer Tabelle und kontaktieren Sie uns jederzeit
-			gerne für weiter Informationen </p> 		
+			gerne für weiter Informationen </p>
 
-		<table>
+		<table class="center">
 			<tr>
 				<th> Service </th>			<!-- Kopfzeilen -->
 				<th> Preisrahmen </th>
@@ -53,5 +53,3 @@
 
 	</body>
 </html>
-	
-
