--- a/fs_index.html
+++ b/fs_index.html
@@ -1,10 +1,10 @@
-<!doctype html>		
-
+<!DOCTYPE html>
+<html>
 <html lang="de">
 	<head>
 		<meta charset = "utf-8">
 		<meta name = "viewport" content = "width=device-width, inital-scale=1.0">
-
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
 		<titel> Food Savior Startseite
 		</titel>
 	</head>
@@ -12,15 +12,15 @@
 	<body>
 		<h1> Food Savior - Einkaufen mit Sinn </h1>	 <!-- Einleitung auf unserer Frontpage-->
 		<h2> Willkommen auf unserer Homepage </h2>
-
+    <img src="logo.png" alt="Food Savior :)">
 		<!-- hier steht die Menüleiste -->
 		<nav>
 			<ul>
 				<li> <a tabindex = "0" aria-current= "page"> Startseite </a> </li>
-				<li> <a href = "html/fs_preise.html"> Unsere Produkte </a> </li>
-				<li> <a href = "html/fs_portfolio.html"> Erfahrungsberichte </a> </li>
-				<li> <a href = "html/fs_ueber_uns.html"> Food Savior - Wer sind wir </a> </li>
-				<li> <a href = "html/fs_kontakt.html"> Kontaktdaten </a> </li> 
+				<li> <a href = "fs_preise.html"> Unsere Produkte </a> </li>
+				<li> <a href = "fs_portfolio.html"> Erfahrungsberichte </a> </li>
+				<li> <a href = "fs_ueber_uns.html"> Food Savior - Wer sind wir </a> </li>
+				<li> <a href = "fs_kontakt.html"> Kontaktdaten </a> </li>
 			</ul>
 		</nav>
 
@@ -41,9 +41,9 @@
  			publicava greco-latin se web.</p>
 
 		<!-- Falls jemand listen erweitern möchte, <ul> tag -> ungeordnete listen, <ol> tag -> geordnete listen -->
-		
+
 		<h3> Hier ein paar der Dinge die uns besonders wichtig waren </h3>
-		
+
 		<ul>
 			<li> Lorem ipsum dolor </li>
 			<li> At vero eos et accusam
@@ -57,14 +57,10 @@
 			<li> Lorem ipsum dolor </li>
 		</ul>
 
-		<h3> Noch nicht überzeugt? - Lesen Sie doch unter dem Menüpunkt Portfolio von den Erfahrungsberichten 
+		<h3> Noch nicht überzeugt? - Lesen Sie doch unter dem Menüpunkt Portfolio von den Erfahrungsberichten
 			 unserer Zufriedenen Kunden </h3>
 
-		<p>	Web de major tentation primarimente, se periodicos denominator que. Sia un lista studio millennios, 			asia vices regno non se. Non e tamben subjecto denomination, de duce regno altere sed, ha pote medio 				continentes nos. Asia europeo duo le, medio synonymo interlinguistica ma del.</p>	
+		<p>	Web de major tentation primarimente, se periodicos denominator que. Sia un lista studio millennios, 			asia vices regno non se. Non e tamben subjecto denomination, de duce regno altere sed, ha pote medio 				continentes nos. Asia europeo duo le, medio synonymo interlinguistica ma del.</p>
 
 	</body>
-</html>						
-
-
-
-
+</html>
