--- a/fs_ueber_uns.html
+++ b/fs_ueber_uns.html
@@ -31,7 +31,7 @@
 			iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait
 			nulla facilisi. <p>
 
-		<h3> Food Savior - wer ist das überhaupt??? </h3>
+		<h3> Food Savior - wer ist das überhaupt? </h3>
 		<p> Food Savior das ist ein Team aus 4 jungen dynamischen und ambitionierten Menschen welche es sich zur
 			Aufgabegabe gemacht haben ein wirtschaflichtes Konzept mit einer großen Portion Nachhaltigkeit zu
 			Verbinden. Wir, dass sind Sophie, Alex, Lam und Tony wollen mit unserer Idee zeigen, dass sich
