--- a/fs_portfolio.html
+++ b/fs_portfolio.html
@@ -52,8 +52,8 @@
 			<li> Günstig </li>
 			<li> Zuverlässig </li>
 			<li> Unkompliziert </li>
-			<li> Liest das wirklich noch jemand??? </li>
-			<li> Jesus!!! </li>
+			<li> Verantwortungsvoll </li>
+			<li> Kundenorientiert </li>
 		</ul>
 
 	</body>
