--- a/fs_ueber_uns.html
+++ b/fs_ueber_uns.html
@@ -25,11 +25,15 @@
 
 
 		<h3> Unsere Leitbild - unserer Vision </h3>
-		<p> Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
- 			aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit
- 			esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan e
-			iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait
-			nulla facilisi. <p>
+		<p>  Umweltthemen sind derzeit
+			stärker im Fokus als je zuvor. Dies schlägt sich nicht nur in den Wahlerfolgen
+			der Grünen wieder. Der Siegeszug von Fairtrade- und Bioprodukten ist ein
+			weiterer Bereich. Wir möchten mit unserem Projekt ein Problem angehen,
+			dessen Wichtigkeit weit unterschätzt wird. Die Lebensmittelverschwendung ist
+			ein immenses Problem. 760.000 Tonnen Lebensmittel werden alleine in
+			Österreich jedes Jahr weggeschmissen. Unsere Idee ist es, diese
+			Menge zu reduzieren durch Zusammenarbeit mit Supermärkten. Gleichzeitig möchten wir den teilnehmenden Unternehmen zu weiterem wirtschaftlichen Wachstum verhelfen durch
+			bessere Nutzung von Ressourcen.  <p>
 
 		<h3> Food Savior - wer ist das überhaupt? </h3>
 		<p> Food Savior das ist ein Team aus 4 jungen dynamischen und ambitionierten Menschen welche es sich zur
@@ -40,11 +44,11 @@
 			Schritt im Prozess der Wertschöpfungskette und helfen dabei auch noch Geld zu sparen.
 
 		<h3> Unser Konzept kurz erklärt </h3>
-		<p> Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum
-			dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit
-			praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit
-			amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-			aliquam erat volutpat. </p>
+		<p> Wir arbeiten mit Supermarkt Billa zusammen,
+			um Produkte zu vergünstigten Preisen verkaufen, die entweder das
+			Mindesthaltbarkeitsdatum fast erreicht haben oder bei denen es sich um
+			Ausschussware handelt. Die bestehende App soll dazu erweitert werden, um eine weitere Funktionalität. Filialmitarbeiter sollen dazu 
+			in der Lage sein, von den potenziellen Verkaufsartikeln, solche auszuwählen, die vergünstigt angeboten werden sollen. </p>
 
 		<h3> Und neugierig geworden - dann schau doch auf unserer Kontaktliste vorbei und trag dich kostenlos
 			in unseren Newsletter ein für spannende Infos ;) </h3>
