--- a/fs_preise.html
+++ b/fs_preise.html
@@ -10,6 +10,7 @@
 	</head>
 
 	<body>
+		<div class="content">
 		<h2> Unsere Produktübersicht </h2>
 
 	<!-- hier steht die Menüleiste -->
@@ -50,6 +51,6 @@
 
 		<h3> Für Rückfragen sind wir jederzeit gerne entweder telefonisch oder per Mail erreichbar </h3>
 		<h3> Tel: 0123/ 456 789 12 oder unter food.savior@office.com </h3>
-
+		</div>
 	</body>
 </html>
