--- a/fs_portfolio.html
+++ b/fs_portfolio.html
@@ -10,6 +10,7 @@
 	</head>
 
 	<body>
+		<div class="content">
 		<h2> Erfahrungsberichte mit Food Savior </h2>
 
 	<!-- hier steht die Menüleiste -->
@@ -55,6 +56,6 @@
 			<li> Verantwortungsvoll </li>
 			<li> Kundenorientiert </li>
 		</ul>
-
+	</div>
 	</body>
 </html>
