--- a/fs_kontakt.html
+++ b/fs_kontakt.html
@@ -10,6 +10,7 @@
 	</head>
 
 	<body>
+		<div class="content">
 		<h2> Food Savior - Kontaktdaten </h2>
 
 	<!-- hier steht die Menüleiste -->
@@ -53,6 +54,6 @@
 				<li> Alle Inhalte dieser Website sind Eigentum von Food Savior und ihren Inhaber*innen </li>
 			</ul>
 
-
+		</div>
 	</body>
 </html>
