--- a/fs_index.html
+++ b/fs_index.html
@@ -10,6 +10,7 @@
 	</head>
 
 	<body>
+		<div class="content">
 		<h1> Food Savior - Einkaufen mit Sinn </h1>	 <!-- Einleitung auf unserer Frontpage-->
 		<h2> Willkommen auf unserer Homepage </h2>
     <img src="logo.png" alt="Food Savior :)">
@@ -60,6 +61,6 @@
 			 unserer Zufriedenen Kunden </h3>
 
 		<p>	Web de major tentation primarimente, se periodicos denominator que. Sia un lista studio millennios, 			asia vices regno non se. Non e tamben subjecto denomination, de duce regno altere sed, ha pote medio 				continentes nos. Asia europeo duo le, medio synonymo interlinguistica ma del.</p>
-
+		</div>
 	</body>
 </html>
