--- a/fs_portfolio.html
+++ b/fs_portfolio.html
@@ -27,25 +27,19 @@
 		<h3> Anbei finden Sie Erfahungsberichte aus vergangenen Food Savior Projekten </h3>
 
 		<h4> Max Mustermann, Billa Filialleiter in Musterstadt </h4>
-		<p> At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
- 			sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-			diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. </p>
+		<p> Wow. Das war ein tolles Projekt. Die Integration von Food Savior in unsere App lief reibungslos. Wir werden viele Produkte los, die wir ohne Food Savior nicht hätten verkaufen können. Das Geschäft brummt. Ich kann
+		Food Savior gerne für andere Supermärkte empfehlen. </p>
 
 		<h4> Sandra Meisinger, Rewe Konzern Mitarbeiterin in Hanseheim </h4>
-		<p> sam aliquyam diam diam dolore dolores duo eirmod eos erat, et nonumy sed tempor et et invidunt justo
-		 	labore Stet clita ea et gubergren, kasd magna no rebum. sanctus sea sed takimata ut vero voluptua.
-			est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur </p>
-
-		<h4> Ali Chan, Billa Feinkostmitarbeiter in Hülsenberg </h4>
-		<p> ing id quod mazim placerat facer possim assum. Lorem ipsum dolor sit amet, consectetuer adipiscing
-		 	elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-			Ut wisi enim ad minim veniam </h4>
+		<p> Die Kennzahlen von Food Savior stimmen. Wir messen den Umsatz, der durch Food Savior generiert wird, indem wir durch die Jö-Punkte tätsächliche Einkäufe tracken können.
+		Und dieser Umsatz ist rosig. Was für eine tolle Erfolgsgeschichte. Und das Team von Food Savior ist auch noch sehr sympatisch </p>
 
 		<h4> Rosamunde Hansen, Langjährige Billa Stammkunding aus Rüstenheim </h4>
-		<p> Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
-	 		aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit
-			esse molestie consequat </h4>
+		<p> Ich bin Rentnerin und lebe von meiner mickrigen Rente. Daher spare ich auch immer gerne Geld. Außerdem verdonnert mich meine Enkelin zu mehr Umweltbewusstsein und sagt
+		immer "OK, Boomer" zu mir. Das kann ich mir nicht gefallen lassen. Food Savior hat mich gerettet. Damit habe ich schon mehr Karmapunkte gesammelt als meine Enkelin haben wird. Und das Essen schmeckt auch.</h4>
 
+		<h4> Ayça Pansen, Billa Feinkostmitarbeiter in Hülsenberg </h4>
+		<p> Hallo, ich bin  Rosamunde Hansen's Enkelin. Ich kann nur bestätigen, dass das Essen von meiner Oma grandios ist. Die Sachen von Food Savior haben eine Topqualität</h4>
 
 		<h3> Fünf einfache Gründe Food Savior zu wählen </h3>
 			<ul>
