--- a/fs_index.html
+++ b/fs_index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <html lang="de">
+	<div>
 	<head>
 		<meta charset = "utf-8">
 		<meta name = "viewport" content = "width=device-width, inital-scale=1.0">
@@ -10,7 +11,6 @@
 	</head>
 
 	<body>
-		<div class="content">
 		<h1> Food Savior - Einkaufen mit Sinn </h1>	 <!-- Einleitung auf unserer Frontpage-->
 		<h2> Willkommen auf unserer Homepage </h2>
     <img src="logo.png" alt="Food Savior :)">
@@ -61,6 +61,7 @@
 			 unserer Zufriedenen Kunden </h3>
 
 		<p>	Web de major tentation primarimente, se periodicos denominator que. Sia un lista studio millennios, 			asia vices regno non se. Non e tamben subjecto denomination, de duce regno altere sed, ha pote medio 				continentes nos. Asia europeo duo le, medio synonymo interlinguistica ma del.</p>
-		</div>
+		
 	</body>
+		</div>
 </html>
