--- a/fs_kontakt.html
+++ b/fs_kontakt.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <html lang="de">
+	<div>
 	<head>
 		<meta charset = "utf-8">
 		<meta name = "viewport" content = "width=device-width, inital-scale=1.0">
@@ -10,7 +11,7 @@
 	</head>
 
 	<body>
-		<div class="content">
+		
 		<h2> Food Savior - Kontaktdaten </h2>
 
 	<!-- hier steht die Menüleiste -->
@@ -54,6 +55,7 @@
 				<li> Alle Inhalte dieser Website sind Eigentum von Food Savior und ihren Inhaber*innen </li>
 			</ul>
 
-		</div>
+		
 	</body>
+		</div>
 </html>
