--- a/fs_portfolio.html
+++ b/fs_portfolio.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <html lang="de">
+	<div>
 	<head>
 		<meta charset = "utf-8">
 		<meta name = "viewport" content = "width=device-width, inital-scale=1.0">
@@ -10,7 +11,7 @@
 	</head>
 
 	<body>
-		<div class="content">
+		
 		<h2> Erfahrungsberichte mit Food Savior </h2>
 
 	<!-- hier steht die Menüleiste -->
@@ -50,6 +51,7 @@
 			<li> Verantwortungsvoll </li>
 			<li> Kundenorientiert </li>
 		</ul>
-	</div>
+	
 	</body>
+	</div>
 </html>
