--- a/fs_preise.html
+++ b/fs_preise.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <html lang="de">
+	<div>
 	<head>
 		<meta charset = "utf-8">
 		<meta name = "viewport" content = "width=device-width, inital-scale=1.0">
@@ -10,7 +11,7 @@
 	</head>
 
 	<body>
-		<div class="content">
+		
 		<h2> Unsere Produktübersicht </h2>
 
 	<!-- hier steht die Menüleiste -->
@@ -51,6 +52,7 @@
 
 		<h3> Für Rückfragen sind wir jederzeit gerne entweder telefonisch oder per Mail erreichbar </h3>
 		<h3> Tel: 0123/ 456 789 12 oder unter food.savior@office.com </h3>
-		</div>
+		
 	</body>
+		</div>
 </html>
