--- a/fs_ueber_uns.html
+++ b/fs_ueber_uns.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <html lang="de">
+	<div>
 	<head>
 		<meta charset = "utf-8">
 		<meta name = "viewport" content = "width=device-width, inital-scale=1.0">
@@ -10,7 +11,7 @@
 	</head>
 
 	<body>
-		<div class="content">
+		
 		<h2> Food Savior - Über uns </h2>
 
 	<!-- hier steht die Menüleiste -->
@@ -53,6 +54,7 @@
 
 		<h3> Und neugierig geworden - dann schau doch auf unserer Kontaktliste vorbei und trag dich kostenlos
 			in unseren Newsletter ein für spannende Infos ;) </h3>
-		</div>
+		
 	</body>
+		</div>
 </html>
