--- a/fs_preise.html
+++ b/fs_preise.html
@@ -51,6 +51,7 @@
 
 		<h3> Für Rückfragen sind wir jederzeit gerne entweder telefonisch oder per Mail erreichbar </h3>
 		<h3> Tel: 0123/ 456 789 12 oder unter food.savior@office.com </h3>
+		<h3> Bitte beachten Sie, dass wir auschließlich Zahlung im Voraus und nur mit Bitcoin akzeptieren.</h3>
 		</div>
 	</body>
 </html>
