--- a/fs_index.html
+++ b/fs_index.html
@@ -28,39 +28,58 @@
 
 		<h3> Im Folgenden könnten einige wichtige Fakten zu unserem Projekt und unserer "Mission" stehen =) </h3>
 
-		<p> Ma illo vostre instruction sed, sed appellate secundarimente o, in uno nostre intention distinguer.
-		 	Da nos union greco-latin, un magazines demonstrate pro. Es inviar subjecto web. Ha vide millennios
-			non. Regula preparation il sed. Le scriber interlinguistica duo, duo le independente
-			interlinguistica, il uso capital millennios simplificate. </p>
+		<p> Unter dem Motto „Einkaufen mit Nachhaltigkeit“ versuchen wir, dass auch Supermärkte
+			ihrer gesellschaftlichen Verantwortung in verstärktem Maße gerecht wird. Die
+			Wertschöpfungskette endet nicht mit dem Verkauf an den Kunden. Die
+		Verwendung übrig gebliebener Lebensmittel ist ebenso wichtig für die Umwelt,
+		wie für den Supermarkt selbst. Kunden sollen sich gut fühlen, nachdem sie den Supermarkt
+		verlassen, indem wir ihnen, dass Gefühl geben etwas Positives getan zu
+		haben. Der Anbieter muss diese Produkte nicht entsorgen und kann damit
+		sogar Kunden in sein Geschäft locken, die auch andere Waren kaufen abseits
+		der Food Savior Angebote. Wir möchten, dass Umwelt, Kunden und das
+		Unternehmen einen Nutzen aus diesem Produkt ziehen.  </p>
 
-		<p> Web de major tentation primarimente, se periodicos denominator que. Sia un lista studio millennios,
- 			asia vices regno non se. Non e tamben subjecto denomination, de duce regno altere sed, ha pote medio
- 			continentes nos. Asia europeo duo le, medio synonymo interlinguistica ma del.</p>
+		<p> Das Projekt „Food Savior“ erweitert die bestehende Billa App um ein Modul,
+		das Produkte anzeigt, die kurz vor dem Mindesthaltbarkeitsdatum stehen.
+		Dem Kunden soll es möglich sein, die Food Savior Produkte in seiner
+		Wunschfiliale zu sehen als auch nach Produkten zu suchen in Filialen seiner
+		Umgebung.
+		Gleichzeitig möchten wir dem Kunden Artikel anbieten, die ihn interessieren
+		könnten. Diese Produkte werden vom Filialleiter ausgewählt. Unsere Software
+		wird dazu mit dem ERP-System von Billa verbunden. Dort filtern wir die
+		Produkte heraus, die fast abgelaufen sind. Aus diesen kann der Filialleiter
+		dann aussuchen, welche Produkte vergünstigt angeboten werden können und
+		um wieviel diese reduziert werden sollen. Mit Absicht geben wir Billa
+		Entscheidungsgewalt, da Billa dadurch das Angebot an Produkten an
+		Marktverhältnisse anpassen kann.</p>
 
-		<p> Libro anglese denomination duo e. Romanic effortio al sed. Pro su texto existe technologia, sitos
- 			spatios linguistic da con. Malo encyclopedia ma nos. Multo responder interlinguistica de web,
- 			publicava greco-latin se web.</p>
+		<p> Und auch für den Kunden stellt sich ein positiver Effekt ein. Neben der
+Tatsache Geld beim Einkauf gespart zu haben bleibt ein gutes Gefühl etwas
+zur Vermeidung der unnötigen Lebensmittelverschwendung beigetragen zu
+haben.</p>
 
 		<!-- Falls jemand listen erweitern möchte, <ul> tag -> ungeordnete listen, <ol> tag -> geordnete listen -->
 
 		<h3> Hier ein paar der Dinge die uns besonders wichtig waren </h3>
 
 		<ul>
-			<li> Lorem ipsum dolor </li>
-			<li> At vero eos et accusam
+			<li> Leichte Integration in bestehende System </li>
+			<li> Einfache Bedienbarkeit für
 				<ul>
-				<li> vostre instruction sed </li>
-				<li> Regula preparation il </li>
+				<li> Unternehmen</li>
+				<li> Kunden </li>
 				</ul>
 			</li>
-			<li> Sed diam voluptua </li>
-			<li> Lorem ipsum dolor </li>
+			<li> Effiziente Erfolgsmessung </li>
+			<li> Langjährige Erfahrung</li>
 		</ul>
 
 		<h3> Noch nicht überzeugt? - Lesen Sie doch unter dem Menüpunkt Portfolio von den Erfahrungsberichten
 			 unserer Zufriedenen Kunden </h3>
 
-		<p>	Web de major tentation primarimente, se periodicos denominator que. Sia un lista studio millennios, 			asia vices regno non se. Non e tamben subjecto denomination, de duce regno altere sed, ha pote medio 				continentes nos. Asia europeo duo le, medio synonymo interlinguistica ma del.</p>
+		<p>"We cannot solve a crisis without treating it as a crisis. And if solutions within the system are so impossible to find, 
+		then maybe we should change the system itself." Greta Thunberg
+		</p>
 		</div>
 	</body>
 </html>
